<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.trijani.loancalculator.loancalculatorActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#fffbfb"
        android:text="@string/loan_amount"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#050505"
        android:textSize="23sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText3"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_below="@+id/textView"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#050505"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:background="#faf8f8"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#030304"
        android:textSize="23sp"
        android:text="@string/loan_interest"/>
    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#060606"
        android:textSize="25sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/loan_peroid"
        android:id="@+id/textView3"
        android:textColor="#f4600d4c"
        android:textSize="23sp"
        android:textAlignment="center"
        android:textColorHighlight="#080808"
        android:background="#fbf6f6"
        android:layout_below="@+id/editText3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <LinearLayout
        android:id="@+id/installmentslayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/img1"
        android:backgroundTintMode="src_in"
        android:orientation="horizontal"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/loan_peroid1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0508ca"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/loan_peroid2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0508ca"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/loan_peroid3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0508ca"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/loan_peroid4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0508ca"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/loan_peroid5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0508ca"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/loan_peroid6"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0508ca"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:text="@string/loan_peroid0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0508ca"
                android:textSize="23sp"
                android:maxLength="10" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignLeft="@+id/textView10"
                android:layout_alignStart="@+id/textView10"
                android:layout_alignTop="@+id/textView5"
                android:layout_weight="1"
                android:text="@string/loan_peroid0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0508ca"
                android:textSize="23sp"

                android:maxLength="10" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignBottom="@+id/textView6"
                android:layout_alignLeft="@+id/textView11"
                android:layout_alignStart="@+id/textView11"
                android:layout_weight="1"
                android:text="@string/loan_peroid0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0508ca"
                android:textSize="23sp"
                android:maxLength="10" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_above="@+id/textView8"
                android:layout_alignLeft="@+id/textView12"
                android:layout_alignStart="@+id/textView12"
                android:layout_weight="1"
                android:text="@string/loan_peroid0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0508ca"
                android:textSize="23sp"
                android:maxLength="10" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_above="@+id/textView9"
                android:layout_alignLeft="@+id/textView13"
                android:layout_alignStart="@+id/textView13"
                android:layout_weight="1"
                android:text="@string/loan_peroid0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0508ca"
                android:textSize="23sp"
                android:maxLength="10" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignLeft="@+id/textView14"
                android:layout_alignStart="@+id/textView14"
                android:layout_alignTop="@+id/textView9"
                android:layout_weight="1"
                android:text="@string/loan_peroid0"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#0508ca"
                android:textSize="23sp"
                android:maxLength="10" />


        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
